[package]
name = "rustimpl"
version = "0.1.0"
authors = ["lyyyuna <lyyyuna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["full"] }
structopt = { version = "0.3", default-features = false }